			SWI-Prolog ChangeLog
			====================

  * ENHANCED: allocate clause as one chunck, reducing allocations and
    memory-requirements and improving locality.

  * ENHANCED: Multi-threaded performance:

	- No longer use reference-counts on static code but use clause
	  garbage collection to collect redefined static procedures.
	- Large reduction of access to thread-local data by passing
	  this data around and use one-fetch-per-function more widely.
	- Introduced thread-local heap-allocation policy to reduce
	  the use of locks.

  * ADDED: multi-threading support in the windows version based on
    pthread-win32, an Open Source emulation of POSIX threads on
    Win32.  Progress:

	- Kernel running on top of pthread-win32
	- Console code (plterm.dll/plwin.exe) allows for multiple consoles
	- Basics seem to work fine.

    Consequences:

	- All access to the console using plterm.dll and console.h is
	  totally incompatible.

VERSION 5.0.10 (Sep 26, 2002)
=============================

  * FIXED: incorrect messages about not being able to import predicates
    from module user.

VERSION 5.0.10a (Sep 25, 2002)
==============================

  * ADDED: plwin.exe: win_window_pos/1 to control the geometry and zorder
    of the console.

  * FIXED: thread_peek_message/1 unification problem if the head message
    didn't unify (Sergey Tikhonov).

  * FIXED: Demo .plrc (pl.ini) to use the flag `gui' rather than `xpce' to
    see whether to load the gui-tracer (Jakub Jiricek).

  * FIXED: GUI tracer: check whether file is modified outside the built-in
    editor.  (Jakub Jiricek).

  * FIXED: Properly compile A *-> B (without else-branche) to a normal
    conjunction.  (Jakub Jiricek).

  * FIXED: GCC 3.2/SPARC problems and Solaris 9 portability issues.
    Thanks to Pieter Donche for providing access to their machine.

  * FIXED: Various MacOS 10.2 portability issues (Paulo Moura).

  * FIXED: portray_clause(q:-x*->y).  (Jakub Jiricek).
