@@ -13,6 +13,9 @@
 /* Define if MAP_ANON is defined and works ok */
 #undef HAVE_MAP_ANON
 
+/* Define if files can be mapped */
+#undef CAN_MMAP_FILES
+
 /* Define if you can't use asm("nop") to separate two labels */
 #undef NO_ASM_NOP
 
